--- a/footerStickyNotif.html
+++ b/footerStickyNotif.html
@@ -1,7 +1,31 @@
 <div class="sticky-footer hidden">
     <div id="sticky-footer-bar" class="row">
-        <h4 class="sticky-footer-text">
+        <h4 class="sticky-footer-text col-12 col-md-8 col-md-offset-2">
             <a href="/contact.html">Now booking 2021 & 2022 weddings! Claim your date today!</a>
+        </h4>
+        <h4 class="sticky-footer-text display-none-sm">
+            <ul class="social-icons">
+                <li>
+                    <a href="https://www.instagram.com/forrestherman/" target="_blank"><i class="fab fa-instagram"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/forrestherman.photography" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.pinterest.ca/forresthermanphotography/" target="_blank"><i class="fab fa-pinterest-p"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/channel/UCtqtGIeIzLx5YykDAU3_CrQ" target="_blank"><i class="fab fa-youtube"></i></a>
+                </li>
+            </ul>
         </h4>
     </div>
 </div>
+
+<link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+/>
