--- a/index.html
+++ b/index.html
@@ -29,12 +29,18 @@
         <meta name="p:domain_verify" content="c4b5730c61a16c84e09c3bbf2e419c05" />
 
         <!-- Fonts -->
-        <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet" />
         <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link
             href="https://fonts.googleapis.com/css2?family=Cardo&family=DM+Serif+Display:ital@0;1&family=Fanwood+Text:ital@0;1&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap"
             rel="stylesheet"
+        />
+
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+            integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
         />
 
         <!-- Animate.css -->
@@ -592,16 +598,16 @@
                             <div>
                                 <ul class="fh5co-social-icons">
                                     <li>
-                                        <a href="https://www.instagram.com/forrestherman/" target="_blank"><i class="icon-instagram"></i></a>
+                                        <a href="https://www.instagram.com/forrestherman/" target="_blank"><i class="fab fa-instagram"></i></a>
                                     </li>
                                     <li>
-                                        <a href="https://www.facebook.com/forrestherman.photography" target="_blank"><i class="icon-facebook"></i></a>
+                                        <a href="https://www.facebook.com/forrestherman.photography" target="_blank"><i class="fa fa-facebook-f"></i></a>
                                     </li>
                                     <li>
-                                        <a href="https://www.pinterest.ca/forresthermanphotography/" target="_blank"><i class="icon-pinterest"></i></a>
+                                        <a href="https://www.pinterest.ca/forresthermanphotography/" target="_blank"><i class="fab fa-pinterest-p"></i></a>
                                     </li>
                                     <li>
-                                        <a href="https://www.youtube.com/channel/UCtqtGIeIzLx5YykDAU3_CrQ" target="_blank"><i class="icon-youtube"></i></a>
+                                        <a href="https://www.youtube.com/channel/UCtqtGIeIzLx5YykDAU3_CrQ" target="_blank"><i class="fab fa-youtube"></i></a>
                                     </li>
                                 </ul>
                             </div>
@@ -626,6 +632,9 @@
         </script>
         <!--end of Footer notif bar-->
 
+        <!-- Font Awesome -->
+        <script src="https://use.fontawesome.com/bfdc9bea0d.js"></script>
+
         <!-- jQuery -->
         <script src="js/jquery.min.js"></script>
         <!-- jQuery Easing -->
@@ -649,9 +658,6 @@
         <script src="js/simplyCountdown.js"></script>
         <!-- Main -->
         <script src="js/main.js"></script>
-
-        <!-- Font Awesome -->
-        <script src="https://use.fontawesome.com/bfdc9bea0d.js"></script>
 
         <script>
             var d = new Date(new Date().getTime() + 200 * 120 * 120 * 2000)
