--- a/index.html
+++ b/index.html
@@ -341,11 +341,16 @@
                                                 <span>Katy & Kevin</span>
                                                 <blockquote>
                                                     <p>
-                                                        "Forrest covered our wedding day, and we could not recommend his services enough. We were both initially not planning on having videography for
-                                                        our wedding (and just going with photos) but ultimately decided to give it a try and now we could not imagine not having the video. Forrest’s
-                                                        work was incredible, from the communication leading up to the wedding, to the day itself, and then the correspondence afterwards. He was amazing
-                                                        to work with and his work was incredible. He created a beautiful video that we were proud to share with those who could not attend. His passion
-                                                        and talent really captured our day better than we could have imagined and we would absolutely recommend his services to anyone."
+                                                        Forrest covered our wedding day, and we could not recommend his services enough. We were both initially not planning on having videography for
+                                                        our wedding (and just going with photos) but ultimately decided to give it a try and now we could not imagine not having the video.
+                                                    </p>
+                                                    <p>
+                                                        Forrest’s work was incredible, from the communication leading up to the wedding, to the day itself, and then the correspondence afterwards. He
+                                                        was amazing to work with and his work was incredible.
+                                                    </p>
+                                                    <p>
+                                                        He created a beautiful video that we were proud to share with those who could not attend. His passion and talent really captured our day better
+                                                        than we could have imagined and we would absolutely recommend his services to anyone.
                                                     </p>
                                                 </blockquote>
                                             </div>
@@ -382,9 +387,8 @@
                         <div class="wrapper-2-grid">
                             <div class="feature-left animate-box order-1" data-animate-effect="fadeInLeft">
                                 <div class="col-md-2">
-                                    <span class="icon image">
-                                        <!-- <i class="icon-calendar"></i> -->
-                                        <img class="testimonial-img" src="/img/Katy&KevinIcon.jpg" alt="" />
+                                    <span class="icon">
+                                        <i class="icon-image"></i>
                                     </span>
                                 </div>
                                 <div class="col-md-10 feature-copy">
@@ -481,13 +485,14 @@
                 </div>
             </div>
 
-            <div id="fh5co-couple-story">
+            <!-- Timeline!!!!!!!!!!!!!!!!!!!! ------------------------------- -->
+            <!-- <div id="fh5co-couple-story">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
                             <span>The Wedding Experience</span>
                             <h2>Timeline</h2>
-                            <!-- <p>Text</p> -->
+                            <p>Text</p>
                         </div>
                     </div>
                     <div class="row">
@@ -536,9 +541,24 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
+
+            <!-- ****************************************** Insta callout ****************************************** -->
 
             <div id="fh5co-started" class="fh5co-bg" style="background-image: url(img/Couple_ErinMike_Banner_001.jpg)">
+                <div class="overlay"></div>
+                <div class="container">
+                    <div class="row animate-box">
+                        <div class="col-md-8 col-md-offset-2 text-center fh5co-heading insta-callout">
+                            <h2>Check Out My Instagram</h2>
+                            <hr class="mdash-hr" />
+                            <h4><a href="https://www.instagram.com/forrestherman/" target="_blank">@forrestherman</a></h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- <div id="fh5co-started" class="fh5co-bg" style="background-image: url(img/Couple_ErinMike_Banner_001.jpg)">
                 <div class="overlay"></div>
                 <div class="container">
                     <div class="row animate-box">
@@ -569,7 +589,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- ****************************************** Footer ****************************************** -->
 
@@ -591,7 +611,7 @@
                                 Forrest Herman
                                 <!-- <a href="https://github.com/forrest-herman" target="_blank">Forrest Herman</a> -->
                                 <br />
-                                <a href="mailto:forrestherman.photography@gmail.com?subject=Forrest Herman — Wedding Inquiry"> forrestherman.photography@gmail.com </a>
+                                <a href="mailto:forrestherman.ca@gmail.com?subject=Forrest Herman — Wedding Inquiry"> forrestherman.ca@gmail.com </a>
                                 <br />
                                 <a href="tel:7052032534"> (705) 203-2534</a>
                             </p>
@@ -601,7 +621,7 @@
                                         <a href="https://www.instagram.com/forrestherman/" target="_blank"><i class="fab fa-instagram"></i></a>
                                     </li>
                                     <li>
-                                        <a href="https://www.facebook.com/forrestherman.photography" target="_blank"><i class="fa fa-facebook-f"></i></a>
+                                        <a href="https://www.facebook.com/forrestherman.ca" target="_blank"><i class="fab fa-facebook-f"></i></a>
                                     </li>
                                     <li>
                                         <a href="https://www.pinterest.ca/forresthermanphotography/" target="_blank"><i class="fab fa-pinterest-p"></i></a>
