--- a/contact.html
+++ b/contact.html
@@ -132,45 +132,18 @@
                 </div>
             </header>
 
-            <!-- <div id="fh5co-couple" class="fh5co-section-gray">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<h2>Hello!</h2>
-					<h3>November 28th, 2016 New York, USA</h3>
-					<p>We invited you to celebrate our wedding</p>
-				</div>
-			</div>
-			<div class="couple-wrap animate-box">
-				<div class="couple-half">
-					<div class="groom">
-						<img src="images/groom.jpg" alt="groom" class="img-responsive">
-					</div>
-					<div class="desc-groom">
-						<h3>Joefrey Mahusay</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
-					</div>
-				</div>
-				<p class="heart text-center"><i class="icon-heart2"></i></p>
-				<div class="couple-half">
-					<div class="bride">
-						<img src="images/bride.jpg" alt="groom" class="img-responsive">
-					</div>
-					<div class="desc-bride">
-						<h3>Sheila Mahusay</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div> -->
+
 
             <div class="fh5co-section">
                 <div class="container">
                     <div class="row">
+
+						
+
                         <div class="col-md-6 col-md-push-6 animate-box">
                             <!-- <h3>Get In Touch</h3> -->
-                            <form action="#">
+							<!-- Contact Form!!!!!!!!! -->
+                            <!-- <form action="#">
                                 <div class="row form-group">
                                     <div class="col-md-6">
                                         <label for="fname">First Name</label>
@@ -232,7 +205,7 @@
                                 <div class="form-group">
                                     <input type="submit" value="Send Message" class="btn btn-primary" />
                                 </div>
-                            </form>
+                            </form> -->
                         </div>
                         <div class="col-md-5 col-md-pull-5 animate-box">
                             <div class="fh5co-contact-info">
@@ -241,7 +214,8 @@
                                     <li class="address">North Bay, Ontario</li>
                                     <li class="phone"><a href="tel://7052032534">(705) 203-2534</a></li>
                                     <li class="email">
-                                        <a href="mailto:forrestherman@gmail.com">forrestherman@gmail.com</a>
+										<a href="mailto:forrestherman.ca@gmail.com?subject=Forrest Herman — Wedding Inquiry"> forrestherman.ca@gmail.com </a>
+
                                     </li>
                                     <!-- <li class="url"><a href="http://gettemplates.co">gettemplates.co</a></li> -->
                                 </ul>
@@ -260,7 +234,8 @@
                         <div class="col-md-8 col-md-offset-2 text-center fh5co-heading insta-callout">
                             <h2>Check Out My Instagram</h2>
 							<hr class="mdash-hr" />
-                            <h4><a href="https://www.instagram.com/forrestherman/" target="_blank">@forrestherman</a></h4>
+							<h4><a href="https://www.instagram.com/forrestherman/" target="_blank">@forrestherman</a></h4>
+
                         </div>
                     </div>
                 </div>
@@ -286,23 +261,23 @@
                                 Forrest Herman
                                 <!-- <a href="https://github.com/forrest-herman" target="_blank">Forrest Herman</a> -->
                                 <br />
-                                <a href="mailto:forrestherman.photography@gmail.com?subject=Forrest Herman — Wedding Inquiry"> forrestherman.photography@gmail.com </a>
+                                <a href="mailto:forrestherman.ca@gmail.com?subject=Forrest Herman — Wedding Inquiry"> forrestherman.ca@gmail.com </a>
                                 <br />
                                 <a href="tel:7052032534"> (705) 203-2534</a>
                             </p>
                             <div>
                                 <ul class="fh5co-social-icons">
                                     <li>
-                                        <a href="https://www.instagram.com/forrestherman/" target="_blank"><i class="icon-instagram"></i></a>
+                                        <a href="https://www.instagram.com/forrestherman/" target="_blank"><i class="fab fa-instagram"></i></a>
                                     </li>
                                     <li>
-                                        <a href="https://www.facebook.com/forrestherman.photography" target="_blank"><i class="icon-facebook"></i></a>
+                                        <a href="https://www.facebook.com/forrestherman.ca" target="_blank"><i class="fab fa-facebook-f"></i></a>
                                     </li>
                                     <li>
-                                        <a href="https://www.pinterest.ca/forresthermanphotography/" target="_blank"><i class="icon-pinterest"></i></a>
+                                        <a href="https://www.pinterest.ca/forresthermanphotography/" target="_blank"><i class="fab fa-pinterest-p"></i></a>
                                     </li>
                                     <li>
-                                        <a href="https://www.youtube.com/channel/UCtqtGIeIzLx5YykDAU3_CrQ" target="_blank"><i class="icon-youtube"></i></a>
+                                        <a href="https://www.youtube.com/channel/UCtqtGIeIzLx5YykDAU3_CrQ" target="_blank"><i class="fab fa-youtube"></i></a>
                                     </li>
                                 </ul>
                             </div>
