--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                                 <div class="col-md-10 feature-copy">
                                     <h3>Weddings + Elopements</h3>
                                     <p style="margin-bottom: 10px">My wedding packages begin at $1000. This includes a full day's worth of photo-journalism coverage.</p>
-                                    <p><a href="offerings.html#weddings">See packages</a></p>
+                                    <p><a href="#">See packages</a></p>
                                 </div>
                             </div>
 
@@ -407,7 +407,7 @@
                                 <div class="col-md-10 feature-copy">
                                     <h3>Engagements + Couples</h3>
                                     <p>Engagement, proposal and couples sessions begin at $200. Engagement sessions are complimentary with most wedding packages.</p>
-                                    <p><a href="offerings.html#weddings">See packages</a></p>
+                                    <p><a href="#">See packages</a></p>
                                 </div>
                             </div>
                             <div class="feature-left animate-box order-3" data-animate-effect="fadeInLeft">
@@ -422,7 +422,7 @@
                                         I strive to capture your day in a unique and authentic manner. Each film features a hand-picked music track, selected to perfectly match your wedding style. I
                                         offer select wedding film packages, allowing you relive these special moments again and again and to share your day with those who couldn't make it.
                                     </p>
-                                    <p><a href="offerings.html#weddings">See packages</a></p>
+                                    <p><a href="#">See packages</a></p>
                                 </div>
                             </div>
                             <div class="feature-left animate-box order-4" data-animate-effect="fadeInLeft">
@@ -437,7 +437,7 @@
                                         Ideal for those who are serious about their professionalism and corporate appearance. A studio headshot guarantees that you will stand out among the rest.
                                         Includes one wardrobe change.
                                     </p>
-                                    <p><a href="offerings.html#weddings">See packages</a></p>
+                                    <p><a href="#">See packages</a></p>
                                 </div>
                             </div>
 
@@ -465,7 +465,7 @@
                                         Your family is beautiful, why not document it? We can meet at a park, go for a hike, or explore your home—I'm here to create art and capture photos you will
                                         cherish forever.
                                     </p>
-                                    <p><a href="offerings.html#weddings">See packages</a></p>
+                                    <p><a href="#">See packages</a></p>
                                 </div>
                             </div>
                             <div class="feature-left animate-box order-6" data-animate-effect="fadeInLeft">
@@ -477,7 +477,7 @@
                                 <div class="col-md-10 feature-copy">
                                     <h3>Branding + Small Business</h3>
                                     <p>Branding and small business projects are custom quoted to meet your needs. Get in touch!</p>
-                                    <p><a href="offerings.html#weddings">See packages</a></p>
+                                    <p><a href="#">See packages</a></p>
                                 </div>
                             </div>
                         </div>
