--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                             <img class="about-img" src="img/DundurnCastle_010.jpg" alt="" />
                         </div>
                         <div class="col-sm-1"></div>
-                        <div class="col-sm-5 order-sm-1 text-left animate-box flex-col justify-center mobile-text-center">
+                        <div class="col-sm-5 order-sm-1 text-left animate-box flex-col justify-center mobile-text-center fh5co-heading black">
                             <h2 style="font-family: DM Serif Display, serif; letter-spacing: 1px">Hey there, I'm Forrest!</h2>
                             <p>Welcome to my home, I'm so excited to meet you.</p>
                             <p>I'm Forrest, a photographer and filmmaker dedicated to capturing visuals as timeless as your memories.</p>
