--- a/about.html
+++ b/about.html
@@ -25,8 +25,20 @@
         <meta name="twitter:url" content="" />
         <meta name="twitter:card" content="" />
 
-        <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet" />
+        <!-- Fonts -->
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Cardo&family=DM+Serif+Display:ital@0;1&family=Fanwood+Text:ital@0;1&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap"
+            rel="stylesheet"
+        />
+
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+            integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
 
         <!-- Animate.css -->
         <link rel="stylesheet" href="css/animate.css" />
@@ -117,7 +129,7 @@
                     <div class="row no-margin">
                         <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 text-center fh5co-heading animate-box">
                             <span>About Me</span>
-                            <h2>Hey, I'm Forrest</h2>
+                            <h2>hey, I'm Forrest</h2>
                             <p>If you made it this far, it's likely you're considering me for your wedding. That's awesome, I look forward to meeting you and documenting your story.</p>
                             <p>
                                 I'm passionate about photography (I know right? Who would have guessed!) and have been honing my skills for the past 5 years, and love the creative freedom and
