update link images

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         <meta name="keywords" content="photo, film, wedding, wedding photography, photography, filmmaking, couple photos, photos" />
 
         <!-- Facebook and Twitter integration -->
-        <meta property="og:title" content="" />
-        <meta property="og:image" content="" />
-        <meta property="og:url" content="" />
-        <meta property="og:site_name" content="" />
-        <meta property="og:description" content="" />
-        <meta name="twitter:title" content="" />
-        <meta name="twitter:image" content="" />
-        <meta name="twitter:url" content="" />
-        <meta name="twitter:card" content="" />
+        <meta property="og:title" content="img/Couple_Engage_ErinMike_001.jpg" />
+        <meta property="og:image" content="img/Couple_Engage_ErinMike_001.jpg" />
+        <meta property="og:url" content="img/Couple_Engage_ErinMike_001.jpg" />
+        <meta property="og:site_name" content="img/Couple_Engage_ErinMike_001.jpg" />
+        <meta property="og:description" content="img/Couple_Engage_ErinMike_001.jpg" />
+        <meta name="twitter:title" content="img/Couple_Engage_ErinMike_001.jpg" />
+        <meta name="twitter:image" content="img/Couple_Engage_ErinMike_001.jpg" />
+        <meta name="twitter:url" content="img/Couple_Engage_ErinMike_001.jpg" />
+        <meta name="twitter:card" content="img/Couple_Engage_ErinMike_001.jpg" />
         <!-- Pinterest -->
         <meta name="p:domain_verify" content="c4b5730c61a16c84e09c3bbf2e419c05" />
 
