contact page fix
-fixed hamburger menu not working
-added favicon to every page

--- a/contact.html
+++ b/contact.html
@@ -9,46 +9,39 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title>Contact - Forrest Herman - Wedding Photographer + Filmmaker</title>
+        <link rel="icon" href="img/fh-white.png" id="light-scheme-icon" />
+        <!-- <link rel="icon" href="img/fh-black.png" id="dark-scheme-icon" /> -->
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-        <meta
-            name="keywords"
-            content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive"
-        />
-        <meta name="author" content="FREEHTML5.CO" />
-
-        <!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
+        <meta name="description" content="Wedding Photographer + Filmmaker in North Bay, ON. Capturing visuals as timeless as your memories." />
+        <meta name="keywords" content="photo, film, wedding, wedding photography, photography, filmmaking, couple photos, photos" />
 
         <!-- Facebook and Twitter integration -->
-        <meta property="og:title" content="" />
-        <meta property="og:image" content="" />
-        <meta property="og:url" content="" />
-        <meta property="og:site_name" content="" />
-        <meta property="og:description" content="" />
+        <meta property="og:title" content="Forrest Herman - Wedding Photographer + Filmmaker" />
+        <meta property="og:image" content="img/Couple_Engage_ErinMike_001.jpg" />
+        <meta property="og:url" content="https://www.forrestherman.ca/" />
+        <meta property="og:site_name" content="ForrestHerman.ca" />
+        <meta property="og:description" content="I'm a wedding photographer and filmmaker based in North Bay, ON. Capturing moments and memories. Weddings, engagements, events." />
         <meta name="twitter:title" content="" />
-        <meta name="twitter:image" content="" />
+        <meta name="twitter:image" content="img/Couple_Engage_ErinMike_001.jpg" />
         <meta name="twitter:url" content="" />
         <meta name="twitter:card" content="" />
+        <!-- Pinterest -->
+        <meta name="p:domain_verify" content="c4b5730c61a16c84e09c3bbf2e419c05" />
+
+        <!-- Fonts -->
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Cardo&family=DM+Serif+Display:ital@0;1&family=Fanwood+Text:ital@0;1&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap"
+            rel="stylesheet"
+        />
 
         <link
-            href="https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700"
             rel="stylesheet"
-            type="text/css"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+            integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
         />
-        <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet" />
 
         <!-- Animate.css -->
         <link rel="stylesheet" href="css/animate.css" />
@@ -76,47 +69,44 @@
     </head>
     <body>
         <div class="fh5co-loader"></div>
+        <div id="page">
+            <!-- ****************************************** White Nav ****************************************** -->
 
-        <nav id="navbar" class="fh5co-nav" role="navigation">
-			<!-- <div class="overlay-prep" style="background: rgba(0, 0, 0, 0.4)"></div> -->
-			<div class="container">
-				<div id="nav" class="row nav nav-white">
-					<div class="col-xs-2 col-nav">
-						<div id="fh5co-logo">
-							<a href="index.html">
-								<img id="logo" src="img/forrest-herman-white.png" alt="logo" />
-							</a>
-						</div>
-					</div>
-					<div class="col-xs-10 text-right menu-1">
-						<ul id="nav-menu" class="nav-menu">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="about.html">Hello</a></li>
-							<li>
-								<a href="photos.html">Photos</a>
-								<!-- <ul class="dropdown">
+            <nav id="navbar" class="fh5co-nav" role="navigation">
+                <!-- <div class="overlay-prep" style="background: rgba(0, 0, 0, 0.4)"></div> -->
+                <div class="container">
+                    <div id="nav" class="row nav nav-white">
+                        <div class="col-xs-2 col-nav">
+                            <div id="fh5co-logo">
+                                <a href="index.html">
+                                    <img id="logo" src="img/forrest-herman-white.png" alt="logo" />
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-xs-10 text-right menu-1">
+                            <ul id="nav-menu" class="nav-menu">
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="about.html">Hello</a></li>
+                                <li>
+                                    <a href="photos.html">Photos</a>
+                                    <!-- <ul class="dropdown">
 									<li><a href="#">Web Design</a></li>
 									<li><a href="#">eCommerce</a></li>
 									<li><a href="#">Branding</a></li>
 									<li><a href="#">API</a></li>
 								</ul> -->
-							</li>
-							<li>
-								<a href="films.html">Films</a>
-							</li>
-							<li><a href="contact.html">Contact</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</nav>
+                                </li>
+                                <li>
+                                    <a href="films.html">Films</a>
+                                </li>
+                                <li><a href="contact.html">Contact</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </nav>
 
-            <header
-                id="fh5co-header"
-                class="fh5co-cover fh5co-cover-sm"
-                role="banner"
-                style="background-image: url(/img/Couple_ErinMike_Banner_001.jpg)"
-            >
+            <header id="fh5co-header" class="fh5co-cover cover-contact fh5co-cover-sm" role="banner" style="background-image: url(/img/Portfolio_038.jpg)">
                 <div class="overlay overlay-light"></div>
                 <div class="fh5co-container">
                     <div class="row">
@@ -132,17 +122,12 @@
                 </div>
             </header>
 
-
-
             <div class="fh5co-section">
                 <div class="container">
                     <div class="row">
-
-						
-
                         <div class="col-md-6 col-md-push-6 animate-box">
                             <!-- <h3>Get In Touch</h3> -->
-							<!-- Contact Form!!!!!!!!! -->
+                            <!-- Contact Form!!!!!!!!! -->
                             <!-- <form action="#">
                                 <div class="row form-group">
                                     <div class="col-md-6">
@@ -214,8 +199,7 @@
                                     <li class="address">North Bay, Ontario</li>
                                     <li class="phone"><a href="tel://7052032534">(705) 203-2534</a></li>
                                     <li class="email">
-										<a href="mailto:forrestherman.ca@gmail.com?subject=Forrest Herman — Wedding Inquiry"> forrestherman.ca@gmail.com </a>
-
+                                        <a href="mailto:forrestherman.ca@gmail.com?subject=Forrest Herman — Wedding Inquiry"> forrestherman.ca@gmail.com </a>
                                     </li>
                                     <!-- <li class="url"><a href="http://gettemplates.co">gettemplates.co</a></li> -->
                                 </ul>
@@ -233,9 +217,8 @@
                     <div class="row animate-box">
                         <div class="col-md-8 col-md-offset-2 text-center fh5co-heading insta-callout">
                             <h2>Check Out My Instagram</h2>
-							<hr class="mdash-hr" />
-							<h4><a href="https://www.instagram.com/forrestherman/" target="_blank">@forrestherman</a></h4>
-
+                            <hr class="mdash-hr" />
+                            <h4><a href="https://www.instagram.com/forrestherman/" target="_blank">@forrestherman</a></h4>
                         </div>
                     </div>
                 </div>
@@ -311,8 +294,8 @@
         <script src="js/jquery.magnific-popup.min.js"></script>
         <script src="js/magnific-popup-options.js"></script>
         <!-- Google Map -->
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
-        <script src="js/google_map.js"></script>
+        <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
+        <script src="js/google_map.js"></script> -->
 
         <!-- Main -->
         <script src="js/main.js"></script>
