--- a/films.html
+++ b/films.html
@@ -9,41 +9,39 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title>Films - Forrest Herman - Wedding Photographer + Filmmaker</title>
+        <link rel="icon" href="img/fh-white.png" id="light-scheme-icon" />
+        <!-- <link rel="icon" href="img/fh-black.png" id="dark-scheme-icon" /> -->
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-        <meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-        <meta name="author" content="FREEHTML5.CO" />
-
-        <!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
+        <meta name="description" content="Wedding Photographer + Filmmaker in North Bay, ON. Capturing visuals as timeless as your memories." />
+        <meta name="keywords" content="photo, film, wedding, wedding photography, photography, filmmaking, couple photos, photos" />
 
         <!-- Facebook and Twitter integration -->
-        <meta property="og:title" content="" />
-        <meta property="og:image" content="" />
-        <meta property="og:url" content="" />
-        <meta property="og:site_name" content="" />
-        <meta property="og:description" content="" />
+        <meta property="og:title" content="Forrest Herman - Wedding Photographer + Filmmaker" />
+        <meta property="og:image" content="img/Couple_Engage_ErinMike_001.jpg" />
+        <meta property="og:url" content="https://www.forrestherman.ca/" />
+        <meta property="og:site_name" content="ForrestHerman.ca" />
+        <meta property="og:description" content="I'm a wedding photographer and filmmaker based in North Bay, ON. Capturing moments and memories. Weddings, engagements, events." />
         <meta name="twitter:title" content="" />
-        <meta name="twitter:image" content="" />
+        <meta name="twitter:image" content="img/Couple_Engage_ErinMike_001.jpg" />
         <meta name="twitter:url" content="" />
         <meta name="twitter:card" content="" />
+        <!-- Pinterest -->
+        <meta name="p:domain_verify" content="c4b5730c61a16c84e09c3bbf2e419c05" />
 
-        <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet" />
+        <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.gstatic.com" />
-        <!-- Google Fonts -->
-        <link href="https://fonts.googleapis.com/css2?family=Cardo&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap" rel="stylesheet" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Cardo&family=DM+Serif+Display:ital@0;1&family=Fanwood+Text:ital@0;1&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap"
+            rel="stylesheet"
+        />
+
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+            integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
 
         <!-- Font Awesome -->
         <script src="https://use.fontawesome.com/bfdc9bea0d.js"></script>
