--- a/about.html
+++ b/about.html
@@ -9,21 +9,24 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title>About - Forrest Herman - Wedding Photographer + Filmmaker</title>
+        <link rel="icon" href="img/fh-white.png" id="light-scheme-icon" />
+        <!-- <link rel="icon" href="img/fh-black.png" id="dark-scheme-icon" /> -->
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-        <meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-        <meta name="author" content="FREEHTML5.CO" />
+        <meta name="description" content="Wedding Photographer + Filmmaker in North Bay, ON. Capturing visuals as timeless as your memories." />
+        <meta name="keywords" content="photo, film, wedding, wedding photography, photography, filmmaking, couple photos, photos" />
 
         <!-- Facebook and Twitter integration -->
-        <meta property="og:title" content="" />
-        <meta property="og:image" content="" />
-        <meta property="og:url" content="" />
-        <meta property="og:site_name" content="" />
-        <meta property="og:description" content="" />
+        <meta property="og:title" content="Forrest Herman - Wedding Photographer + Filmmaker" />
+        <meta property="og:image" content="img/Couple_Engage_ErinMike_001.jpg" />
+        <meta property="og:url" content="https://www.forrestherman.ca/" />
+        <meta property="og:site_name" content="ForrestHerman.ca" />
+        <meta property="og:description" content="I'm a wedding photographer and filmmaker based in North Bay, ON. Capturing moments and memories. Weddings, engagements, events." />
         <meta name="twitter:title" content="" />
-        <meta name="twitter:image" content="" />
+        <meta name="twitter:image" content="img/Couple_Engage_ErinMike_001.jpg" />
         <meta name="twitter:url" content="" />
         <meta name="twitter:card" content="" />
+        <!-- Pinterest -->
+        <meta name="p:domain_verify" content="c4b5730c61a16c84e09c3bbf2e419c05" />
 
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.gstatic.com" />
