--- a/footerStickyNotif.html
+++ b/footerStickyNotif.html
@@ -1,6 +1,6 @@
 <div class="sticky-footer hidden">
     <div id="sticky-footer-bar" class="row no-margin">
-        <h4 class="sticky-footer-text col-12 col-md-8 col-md-offset-2">
+        <h4 class="sticky-footer-text col-sm-8 col-sm-offset-2">
             <a href="/contact.html">Now booking 2021 & 2022 weddings! Claim your date today!</a>
         </h4>
         <h4 class="sticky-footer-text display-none-sm">
