offerings page updates

--- a/offerings.html
+++ b/offerings.html
@@ -181,17 +181,53 @@
                 <div id="couples" class="container container-narrow">
                     <div class="row fh5co-section less-vertical-padding">
                         <div class="text-center fh5co-heading fh5co-heading-sm animate-box">
-                            <h2 style="text-transform: uppercase">Engagements + Proposals</h2>
-                            <p>Engagements, proposals, and couple sessions begin at $300</p>
-                            <p style="color: black; font-style: normal">
-                                Whether you're planning a love story for today or the future, this session is for you. Capture stunning visuals you and your partner will cherish forever.
-                            </p>
+                            <h2 style="text-transform: uppercase">Events + Celebrations</h2>
+                            <p>Receptions, birthdays, and other celebrations begin at $150, and are quoted on a case by case basis</p>
+                            <p style="color: black; font-style: normal">Throwing a party? I'm in!</p>
                             <div class="btn-container btn-border-black display-flex-row justify-center">
                                 <a class="btn" href="/contact.html">Inquire Here</a>
                             </div>
                         </div>
                         <div class="img-container animate-box">
-                            <img src="/img/Portfolio_010.jpg" alt="" />
+                            <img src="/img/Portfolio_047.jpg" alt="" />
+                        </div>
+                    </div>
+                </div>
+                <hr class="container" />
+                <div id="couples" class="container container-narrow">
+                    <div class="row fh5co-section less-vertical-padding">
+                        <div class="text-center fh5co-heading fh5co-heading-sm animate-box">
+                            <h2 style="text-transform: uppercase">Family Sessions</h2>
+                            <p>Documentary family sessions begin at $100</p>
+                            <p style="color: black; font-style: normal">
+                                This session is for families who want to freeze their memories in time. I want you to have a time capsule to cherish and bring you nostalgia for years to come. We’ll
+                                select an activity for your family to do together while I capture natural, candid moments. Your goofy grins, blazing smiles, and laughter will never be forgotten. Of
+                                course we’ll grab a few gently posed family portraits, but this session is intended as a journalistic session. It’s fun, stress-free, and allows your family to simply
+                                be authentically
+                                <i>yourselves</i>.
+                            </p>
+                            <div class="btn-container btn-border-black display-flex-row justify-center">
+                                <a class="btn" href="/contact.html">Inquire Here</a>
+                            </div>
+                        </div>
+                        <!-- <div class="img-container animate-box">
+                            <img src="/img/Portfolio_047.jpg" alt="" />
+                        </div> -->
+                    </div>
+                </div>
+                <hr class="container" />
+                <div id="couples" class="container container-narrow">
+                    <div class="row fh5co-section less-vertical-padding">
+                        <div class="text-center fh5co-heading fh5co-heading-sm animate-box">
+                            <h3>Love pets? Have a furry friend? Bring them along!</h3>
+                        </div>
+                        <div class="flex-col justify-center">
+                            <div class="img-container animate-box">
+                                <img src="/img/Puppy.jpg" alt="" />
+                            </div>
+                            <!-- <div class="img-container animate-box">
+                                <img src="/img/Portfolio_055.jpg" alt="" />
+                            </div> -->
                         </div>
                     </div>
                 </div>
