added offerings to menu on all pages

--- a/films.html
+++ b/films.html
@@ -107,6 +107,13 @@
                                 <li>
                                     <a href="films.html">Films</a>
                                 </li>
+                                <li class="has-dropdown">
+                                    <a href="offerings.html">Offerings</a>
+                                    <ul class="dropdown">
+                                        <li><a href="offerings.html">Photos</a></li>
+                                        <li><a href="#">Films</a></li>
+                                    </ul>
+                                </li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
                         </div>
