--- a/photos.html
+++ b/photos.html
@@ -94,15 +94,16 @@
                                 <li><a href="about.html">Hello</a></li>
                                 <li>
                                     <a href="photos.html">Photos</a>
-                                    <!-- <ul class="dropdown">
-										<li><a href="#">Web Design</a></li>
-										<li><a href="#">eCommerce</a></li>
-										<li><a href="#">Branding</a></li>
-										<li><a href="#">API</a></li>
-									</ul> -->
                                 </li>
                                 <li>
                                     <a href="films.html">Films</a>
+                                </li>
+                                <li class="has-dropdown">
+                                    <a href="offerings.html">Offerings</a>
+                                    <ul class="dropdown">
+                                        <li><a href="offerings.html">Photos</a></li>
+                                        <li><a href="#">Films</a></li>
+                                    </ul>
                                 </li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
