--- a/offerings.html
+++ b/offerings.html
@@ -206,7 +206,7 @@
                             <p style="color: black; font-style: normal">
                                 This session is for families who want to freeze their memories in time. I want you to have a time capsule to cherish and bring you nostalgia for years to come. We’ll
                                 select an activity for your family to do together while I capture natural, candid moments. Your goofy grins, blazing smiles, and laughter will never be forgotten. Of
-                                course we’ll grab a few gently posed family portraits, but this session is intended as a journalistic session. It’s fun, stress-free, and allows your family to simply
+                                course we’ll grab a few gently-posed family portraits, but this package is intended as a journalistic session. It’s fun, stress-free, and allows your family to simply
                                 be authentically
                                 <i>yourselves</i>.
                             </p>
